<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>world.bentobox</groupId>
    <artifactId>upgrades</artifactId>
    <version>${revision}</version>

    <name>Upgrades</name>
    <description>BentoBox Addon for buying upgrade for island with vault money</description>
    <url>https://github.com/BentoBoxWorld/Upgrades</url>
    <inceptionYear>2020</inceptionYear>

    <scm>
        <connection>scm:git:https://github.com/BentoBoxWorld/Upgrades.git</connection>
        <developerConnection>scm:git:git@github.com:BentoBoxWorld/Upgrades.git</developerConnection>
        <url>https://github.com/BentoBoxWorld/Upgrades</url>
    </scm>

    <ciManagement>
        <system>jenkins</system>
        <url>https://ci.codemc.org/job/BentoBoxWorld/job/Upgrades</url>
    </ciManagement>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/BentoBoxWorld/Upgrades/issues</url>
    </issueManagement>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://github.com/BentoBoxWorld/Upgrades/blob/develop/LICENSE</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <distributionManagement>
        <repository>
            <id>bentoboxworld</id>
            <url>https://repo.codemc.org/repository/bentoboxworld/</url>
        </repository>
    </distributionManagement>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>21</java.version>
        <!-- Testing dependencies -->
        <junit.version>5.10.2</junit.version>
        <mockito.version>5.11.0</mockito.version>
        <mock-bukkit.version>4.110.0</mock-bukkit.version>

        <paper.version>1.21.11-R0.1-SNAPSHOT</paper.version>
        <bentobox.version>3.14.0</bentobox.version>
        <level.version>2.17.0</level.version>
        <limits.version>1.28.0-SNAPSHOT</limits.version>
        <vault.version>1.7</vault.version>

        <revision>${build.version}-SNAPSHOT</revision>

        <!-- This allows to change between versions. -->
        <build.version>1.0.2</build.version>
        <!-- Revision variable removes warning about dynamic version -->
        <revision>${build.version}-SNAPSHOT</revision>
        <!-- Do not change unless you want different name for local builds. -->
        <build.number>-LOCAL</build.number>
        <!-- SonarCloud Analysis -->
        <sonar.organization>bentobox-world</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
    </properties>

    <profiles>
        <profile>
            <!-- ci profile is activated if exist environment variable BUILD_NUMBER. -->
            <!-- It replaces ${build.number} that is currently '-LOCAL' with 
                correct build number from JENKINS machine. -->
            <id>ci</id>
            <activation>
                <property>
                    <name>env.BUILD_NUMBER</name>
                </property>
            </activation>
            <properties>
                <!-- Override only if necessary -->
                <build.number>-b${env.BUILD_NUMBER}</build.number>
            </properties>
        </profile>
        <profile>
            <!-- Master profile is activated if exist environment variable 
                GIT_BRANCH and its value is origin/master. -->
            <!-- It will replace 'revision' with '${build.version}' so it 
                removes '-SNAPSHOT' string at the end. -->
            <!-- Also, as this is release build, build number can be set 
                to empty string. -->
            <!-- This profile will be used only if exist environment variable 
                GIT_BRANCH with value origin/master. -->
            <id>master</id>
            <activation>
                <property>
                    <name>env.GIT_BRANCH</name>
                    <value>origin/master</value>
                </property>
            </activation>
            <properties>
                <!-- Override only if necessary -->
                <revision>${build.version}</revision>
                <!-- Empties build number variable. -->
                <build.number></build.number>
            </properties>
        </profile>
    </profiles>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>bentoboxworld</id>
            <url>https://repo.codemc.org/repository/bentoboxworld/</url>
        </repository>
        <repository>
            <id>codemc</id>
            <url>https://repo.codemc.org/repository/maven-snapshots/</url>
        </repository>
        <repository>
            <id>codemc-repo</id>
            <url>https://repo.codemc.org/repository/maven-public/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.mockbukkit.mockbukkit</groupId>
            <artifactId>mockbukkit-v1.21</artifactId>
            <version>${mock-bukkit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>${paper.version}</version>
            <scope>provided</scope>
        </dependency>
        <!-- Testing-->
        <!-- Mockito (Unit testing) -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>5.11.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>world.bentobox</groupId>
            <artifactId>bentobox</artifactId>
            <version>${bentobox.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>world.bentobox</groupId>
            <artifactId>level</artifactId>
            <version>${level.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>world.bentobox</groupId>
            <artifactId>limits</artifactId>
            <version>${limits.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>${vault.version}</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <!-- By default ${revision} is ${build.version}-SNAPSHOT -->
        <!-- If GIT_BRANCH variable is set to origin/master, then it will 
            be only ${build.version}. -->

        <!-- By default ${build.number} is -LOCAL. -->
        <!-- If the BUILD_NUMBER variable is set, then it will be -b[number]. -->
        <!-- If GIT_BRANCH variable is set to origin/master, then it will 
            be the empty string. -->
        <finalName>${project.name}-${revision}${build.number}</finalName>

        <defaultGoal>clean package</defaultGoal>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
            <resource>
                <directory>src/main/resources/locales</directory>
                <targetPath>./locales</targetPath>
                <filtering>false</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <version>3.1.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.1.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>${java.version}</release>
                    <!-- <source>${java.version}</source> <target>${java.version}</target> -->
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <!--suppress MavenModelInspection -->
                <configuration>
                    <argLine>
                        --add-opens java.base/java.lang=ALL-UNNAMED
                        --add-opens java.base/java.math=ALL-UNNAMED
                        --add-opens java.base/java.io=ALL-UNNAMED
                        --add-opens java.base/java.util=ALL-UNNAMED
                        --add-opens java.base/java.util.stream=ALL-UNNAMED
                        --add-opens java.base/java.text=ALL-UNNAMED
                        --add-opens java.base/java.util.regex=ALL-UNNAMED
                        --add-opens java.base/java.nio.channels.spi=ALL-UNNAMED
                        --add-opens java.base/sun.nio.ch=ALL-UNNAMED
                        --add-opens java.base/java.net=ALL-UNNAMED
                        --add-opens java.base/java.util.concurrent=ALL-UNNAMED
                        --add-opens java.base/sun.nio.fs=ALL-UNNAMED
                        --add-opens java.base/sun.nio.cs=ALL-UNNAMED
                        --add-opens java.base/java.nio.file=ALL-UNNAMED
                        --add-opens java.base/java.nio.charset=ALL-UNNAMED
                        --add-opens java.base/java.lang.reflect=ALL-UNNAMED
                        --add-opens java.logging/java.util.logging=ALL-UNNAMED
                        --add-opens java.base/java.lang.ref=ALL-UNNAMED
                        --add-opens java.base/java.util.jar=ALL-UNNAMED
                        --add-opens java.base/java.util.zip=ALL-UNNAMED
                        --add-opens=java.base/java.security=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-install-plugin</artifactId>
                <version>2.5.2</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.8.2</version>
            </plugin>
             <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.10</version>
                <configuration>
                    <append>true</append>
                    <excludes>
                        <!-- This is required to prevent Jacoco from adding 
                            synthetic fields to a JavaBean class (causes errors in testing) -->
                        <exclude>**/*Names*</exclude>
                        <!-- Prevents the Material is too large to mock error -->
                        <exclude>org/bukkit/Material*</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <goals>
                            <goal>report</goal>
                        </goals>
                        <configuration>
                            <formats>
                                <format>XML</format>
                            </formats>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
